--- a/shells/extension.labs.mariosouto.com/tsconfig.json
+++ b/shells/extension.labs.mariosouto.com/tsconfig.json
@@ -9,6 +9,8 @@
   "include": [
     "_extension/**/*.ts",
     "_extension/**/*.tsx",
+    "pages/**/*.ts",
+    "pages/**/*.tsx",
     "src/**/*.ts",
     "src/**/*.tsx",
   ],
