--- a/libs/tooling/package.json
+++ b/libs/tooling/package.json
@@ -4,8 +4,10 @@
   "description": "A collection of tools for developers",
   "main": "index.js",
   "devDependencies": {
+    "webpack-merge": "5.8.0",
     "copy-webpack-plugin": "^11.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "clean-webpack-plugin": "4.0.0",
     "ts-loader": "9.4.2",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
