--- a/shells/extension.labs.mariosouto.com/tsconfig.json
+++ b/shells/extension.labs.mariosouto.com/tsconfig.json
@@ -4,7 +4,11 @@
     "module": "es6",
     "target": "es6",
     "moduleResolution": "node",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "baseUrl": ".",
+    "paths": {
+      "@src/*": ["./src/*"]
+    }
   },
   "include": [
     "_extension/**/*.ts",
