--- a/shells/app.labs.mariosouto.com/package.json
+++ b/shells/app.labs.mariosouto.com/package.json
@@ -26,7 +26,9 @@
     "@babel/core": "7.19.3",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "@devsoutinho/tooling": "*",
+    "@devsoutinho/common-test": "*"
   },
   "private": true
 }
