--- a/shells/extension.labs.mariosouto.com/package.json
+++ b/shells/extension.labs.mariosouto.com/package.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "version": "1.0.0", 
   "scripts": {
-    "lint": "tsc && eslint './**/*.{js,jsx,ts,tsx}'",
+    "lint": "eslint './**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "yarn lint --fix",
     "test": "jest --maxWorkers=2",
     "test:watch": "yarn test --watch",
@@ -14,6 +14,7 @@
     "@devsoutinho/sknui": "*"
   },
   "devDependencies": {
-    "@devsoutinho/tooling": "*"
+    "@devsoutinho/tooling": "*",
+    "@devsoutinho/common-test": "*"
   }
 }
