--- a/shells/cli.labs.mariosouto.com/package.json
+++ b/shells/cli.labs.mariosouto.com/package.json
@@ -22,7 +22,7 @@
   "devDependencies": {
     "shelljs": "0.8.5",
     "@types/inquirer": "9.0.3",
-    "@devsoutinho/tooling": "*",
+    "@devsoutinho/common-tooling": "*",
     "@devsoutinho/common-test": "*"
   }
 }
