--- a/shells/web.labs.mariosouto.com/package.json
+++ b/shells/web.labs.mariosouto.com/package.json
@@ -19,7 +19,7 @@
     "@devsoutinho/sknui": "*"
   },
   "devDependencies": {
-    "@devsoutinho/tooling": "*",
+    "@devsoutinho/common-tooling": "*",
     "@devsoutinho/common-test": "*",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
