--- a/libs/sknui/package.json
+++ b/libs/sknui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@devsoutinho/sknui",
   "version": "1.0.0",
-  "main": "index.tsx",
+  "main": "web.tsx",
   "license": "MIT",
   "scripts": {
     "dev": "next dev",
