--- a/libs/sknui/package.json
+++ b/libs/sknui/package.json
@@ -1,12 +1,14 @@
 {
   "name": "@devsoutinho/sknui",
   "version": "1.0.0",
-  "main": "web.tsx",
+  "main": "index.ts",
   "license": "MIT",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public",
+    "dev": "yarn storybook",
+    "build": "yarn build-storybook",
+    "start": "yarn storybook"
   },
   "dependencies": {
     "next": "^13.1.1",
@@ -14,6 +16,17 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "react-scripts": "5.0.1",
+    "@storybook/addon-actions": "^6.5.15",
+    "@storybook/addon-essentials": "^6.5.15",
+    "@storybook/addon-interactions": "^6.5.15",
+    "@storybook/addon-links": "^6.5.15",
+    "@storybook/builder-webpack5": "^6.5.15",
+    "@storybook/manager-webpack5": "^6.5.15",
+    "@storybook/node-logger": "^6.5.15",
+    "@storybook/preset-create-react-app": "^4.1.2",
+    "@storybook/react": "^6.5.15",
+    "@storybook/testing-library": "^0.0.13",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "typescript": "4.9.4"
