--- a/shells/app.labs.mariosouto.com/package.json
+++ b/shells/app.labs.mariosouto.com/package.json
@@ -14,6 +14,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "react-native-screens": "3.18.2",
+    "react-native-safe-area-context": "4.4.1",
+    "@react-navigation/native": "6.1.1",
+    "@react-navigation/native-stack": "6.9.7",
     "@types/react-native": "~0.70.6",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
