--- a/shells/app.labs.mariosouto.com/tsconfig.json
+++ b/shells/app.labs.mariosouto.com/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "typeRoots": ["./node_modules/@types", "@types/*.d.ts"],
     "baseUrl": ".",
     "paths": {
       "@src/*": ["./src/*"]
