--- a/shells/app.labs.mariosouto.com/package.json
+++ b/shells/app.labs.mariosouto.com/package.json
@@ -26,6 +26,7 @@
     "@devsoutinho/sknui": "*"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "7.18.9",
     "babel-plugin-module-resolver": "4.1.0",
     "@babel/preset-env": "7.19.3",
     "@babel/core": "7.19.3",
