--- a/shells/web.labs.mariosouto.com/package.json
+++ b/shells/web.labs.mariosouto.com/package.json
@@ -14,13 +14,14 @@
   },
   "dependencies": {
     "next": "^13.1.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
     "@devsoutinho/sknui": "*"
   },
   "devDependencies": {
     "@devsoutinho/common-tooling": "*",
     "@devsoutinho/common-test": "*",
+    "@devsoutinho/common-eslint": "*",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "typescript": "4.9.4"
