--- a/libs/sknui/package.json
+++ b/libs/sknui/package.json
@@ -16,6 +16,8 @@
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@devsoutinho/common-test": "*",
+    "@devsoutinho/common-eslint": "*",
     "react-scripts": "5.0.1",
     "@storybook/addon-actions": "^6.5.15",
     "@storybook/addon-essentials": "^6.5.15",
