--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "license": "MIT",
   "workspaces": {
     "nohoist": [
-      "**/@devsoutinho/common-eslint/**",
-      "**/@devsoutinho/common-eslint/**/*"
+      "**/@devsoutinho/common-eslint",
+      "**/@devsoutinho/common-eslint/**"
     ],
     "packages": [
       "libs/*",
