--- a/libs/common-tooling/package.json
+++ b/libs/common-tooling/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "description": "A collection of tools for developers",
   "main": "index.js",
+  "license": "MIT",
+  "scripts": {
+    "test": "echo 'Not implemented'",
+    "lint": "echo 'Not implemented'"
+  },
   "devDependencies": {
     "webpack-shell-plugin": "0.5.0",
     "webpack-shebang-plugin": "1.1.8",
