--- a/libs/sknui/package.json
+++ b/libs/sknui/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "lint": "tsc && eslint './**/*.{js,jsx,ts,tsx}'",
+    "lint": "eslint './**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "yarn lint --fix",
     "test": "jest --maxWorkers=2",
     "test:watch": "yarn test --watch",
