--- a/libs/common-test/.babelrc
+++ b/libs/common-test/.babelrc
@@ -1,12 +1,10 @@
-module.exports = {
+{
   "presets": [
     ["@babel/preset-react", {
       "runtime": "automatic"
     }],
+    "@babel/preset-flow",
     "@babel/preset-env",
     "@babel/preset-typescript"
-  ],
-  "plugins": [
-    "@babel/plugin-transform-flow-strip-types",
   ]
 }
