--- a/shells/extension.labs.mariosouto.com/package.json
+++ b/shells/extension.labs.mariosouto.com/package.json
@@ -18,6 +18,6 @@
   "devDependencies": {
     "@devsoutinho/common-tooling": "*",
     "@devsoutinho/common-test": "*",
-    "@devsoutinho/common-eslint": "*"
+    "@devsoutinho/common-lint": "*"
   }
 }
