--- a/shells/app.labs.mariosouto.com/package.json
+++ b/shells/app.labs.mariosouto.com/package.json
@@ -24,21 +24,22 @@
     "react-native-screens": "3.18.2"
   },
   "devDependencies": {
-    "@types/react-test-renderer": "^18.0.0",
-    "react-test-renderer": "^18.2.0",
-    "jest": "29.3.1",
-    "jest-expo": "^47.0.1",
-    "ts-node": "10.9.1",
-    "@types/jest": "^29.2.5",
     "@babel/core": "7.19.3",
     "@babel/plugin-proposal-export-namespace-from": "7.18.9",
     "@babel/preset-env": "7.19.3",
     "@devsoutinho/common-lint": "*",
+    "@expo/ngrok": "^4.1.0",
     "@testing-library/jest-native": "5.4.1",
     "@testing-library/react-native": "^11.5.0",
+    "@types/jest": "^29.2.5",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
+    "@types/react-test-renderer": "^18.0.0",
     "babel-plugin-module-resolver": "4.1.0",
+    "jest": "29.3.1",
+    "jest-expo": "^47.0.1",
+    "react-test-renderer": "^18.2.0",
+    "ts-node": "10.9.1",
     "typescript": "4.9.4"
   },
   "private": true
