--- a/libs/sknui/package.json
+++ b/libs/sknui/package.json
@@ -16,14 +16,21 @@
     "build-storybook": "build-storybook -s public"
   },
   "dependencies": {
-    "next": "^13.1.1",
+    "@chakra-ui/react": "2.4.6",
+    "@emotion/react": "11.10.5",
+    "@emotion/styled": "11.10.5",
+    "framer-motion": "8.2.4",
+    "next": "13.1.1",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@babel/core": "7.19.3",
+    "@babel/plugin-proposal-export-namespace-from": "7.18.9",
+    "@babel/preset-env": "7.19.3",
+    "@babel/preset-react": "7.18.6",
     "@babel/preset-typescript": "7.18.6",
     "@devsoutinho/common-lint": "*",
-    "react-scripts": "5.0.1",
     "@storybook/addon-actions": "^6.5.15",
     "@storybook/addon-essentials": "^6.5.15",
     "@storybook/addon-interactions": "^6.5.15",
@@ -34,27 +41,24 @@
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.15",
     "@storybook/testing-library": "^0.0.13",
-    "@types/node": "18.11.18",
-    "@types/react-test-renderer": "^18.0.0",
-    "react-test-renderer": "^18.2.0",
-    "jest": "29.3.1",
-    "jest-expo": "^47.0.1",
-    "ts-node": "10.9.1",
-    "@types/jest": "^29.2.5",
-    "@babel/core": "7.19.3",
-    "@babel/plugin-proposal-export-namespace-from": "7.18.9",
-    "@babel/preset-env": "7.19.3",
+    "@testing-library/jest-dom": "5.16.5",
     "@testing-library/jest-native": "5.4.1",
+    "@testing-library/react": "13.4.0",
     "@testing-library/react-native": "^11.5.0",
+    "@testing-library/user-event": "14.4.3",
+    "@types/jest": "^29.2.5",
+    "@types/node": "18.11.18",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
-    "babel-plugin-module-resolver": "4.1.0",
-    "typescript": "4.9.4",
-    "jest-environment-jsdom": "29.3.1",
-    "@testing-library/react": "13.4.0",
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/user-event": "14.4.3",
+    "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "29.3.1",
-    "@babel/preset-react": "7.18.6"
+    "babel-plugin-module-resolver": "4.1.0",
+    "jest": "29.3.1",
+    "jest-environment-jsdom": "29.3.1",
+    "jest-expo": "^47.0.1",
+    "react-scripts": "5.0.1",
+    "react-test-renderer": "^18.2.0",
+    "ts-node": "10.9.1",
+    "typescript": "4.9.4"
   }
 }
