--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "workspaces": {
       "packages": [
         "libs/*",
-        "shells/*"
+        "shells/*",
+        "labs/*"
       ]
     },
   "devDependencies": {
