--- a/shells/web.labs.mariosouto.com/package.json
+++ b/shells/web.labs.mariosouto.com/package.json
@@ -25,6 +25,9 @@
     "@devsoutinho/common-lint": "*",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "autoprefixer": "^10.0.4",
+    "postcss": "^8.1.10",
+    "tailwindcss": "^2.1.1"
   }
 }
