--- a/shells/web.labs.mariosouto.com/package.json
+++ b/shells/web.labs.mariosouto.com/package.json
@@ -20,6 +20,8 @@
     "@devsoutinho/sknui": "*"
   },
   "devDependencies": {
+    "@headlessui/react": "1.7.7",
+    "@heroicons/react": "2.0.13",
     "@devsoutinho/common-tooling": "*",
     "@devsoutinho/common-test": "*",
     "@devsoutinho/common-lint": "*",
