--- a/shells/web.labs.mariosouto.com/package.json
+++ b/shells/web.labs.mariosouto.com/package.json
@@ -13,16 +13,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@devsoutinho-labs/chat-gpt": "*",
+    "@devsoutinho/sknui": "*",
+    "@supabase/supabase-js": "^2.4.1",
     "next": "^13.1.1",
     "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "@devsoutinho-labs/chat-gpt": "*",
-    "@devsoutinho/sknui": "*"
+    "react-dom": "18.1.0"
   },
   "devDependencies": {
-    "@devsoutinho/common-tooling": "*",
-    "@devsoutinho/common-test": "*",
     "@devsoutinho/common-lint": "*",
+    "@devsoutinho/common-test": "*",
+    "@devsoutinho/common-tooling": "*",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "typescript": "4.9.4"
