--- a/shells/web.labs.mariosouto.com/package.json
+++ b/shells/web.labs.mariosouto.com/package.json
@@ -10,7 +10,8 @@
     "test:watch": "yarn test --watch",
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "db:start": "supabase start"
   },
   "dependencies": {
     "@devsoutinho-labs/chat-gpt": "*",
