--- a/shells/web.labs.mariosouto.com/package.json
+++ b/shells/web.labs.mariosouto.com/package.json
@@ -18,7 +18,8 @@
     "@supabase/supabase-js": "^2.4.1",
     "next": "^13.1.5",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "stripe": "^11.8.0"
   },
   "devDependencies": {
     "@devsoutinho/common-lint": "*",
