--- a/shells/web.labs.mariosouto.com/package.json
+++ b/shells/web.labs.mariosouto.com/package.json
@@ -20,7 +20,7 @@
     "next": "^13.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "stripe": "^11.8.0"
+    "@stripe/stripe-js": "1.46.0"
   },
   "devDependencies": {
     "@devsoutinho/common-lint": "*",
