--- a/shells/web.labs.mariosouto.com/package.json
+++ b/shells/web.labs.mariosouto.com/package.json
@@ -16,6 +16,7 @@
     "@devsoutinho-labs/chat-gpt": "*",
     "@devsoutinho/sknui": "*",
     "@supabase/supabase-js": "^2.4.1",
+    "@stripe/stripe-js": "1.46.0",
     "next": "^13.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0"
