--- a/shells/web.labs.mariosouto.com/package.json
+++ b/shells/web.labs.mariosouto.com/package.json
@@ -10,12 +10,14 @@
     "test:watch": "yarn test --watch",
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "webhooks:stripe": "stripe listen --forward-to localhost:3000/api/webhooks/stripe"
   },
   "dependencies": {
     "@devsoutinho-labs/chat-gpt": "*",
     "@devsoutinho/sknui": "*",
     "@supabase/supabase-js": "^2.4.1",
+    "stripe": "11.8.0",
     "@stripe/stripe-js": "1.46.0",
     "next": "^13.1.5",
     "react": "18.1.0",
