--- a/shells/web.labs.mariosouto.com/package.json
+++ b/shells/web.labs.mariosouto.com/package.json
@@ -14,6 +14,7 @@
     "webhooks:stripe": "stripe listen --forward-to localhost:3000/api/webhooks/stripe"
   },
   "dependencies": {
+    "micro": "10.0.1",
     "@devsoutinho-labs/chat-gpt": "*",
     "@devsoutinho/sknui": "*",
     "@supabase/supabase-js": "^2.4.1",
