--- a/shells/web.labs.mariosouto.com/package.json
+++ b/shells/web.labs.mariosouto.com/package.json
@@ -24,6 +24,9 @@
     "@devsoutinho/common-lint": "*",
     "@devsoutinho/common-test": "*",
     "@devsoutinho/common-tooling": "*",
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.4",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "typescript": "4.9.4"
