--- a/shells/web.labs.mariosouto.com/package.json
+++ b/shells/web.labs.mariosouto.com/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@devsoutinho-labs/chat-gpt": "*",
     "@devsoutinho/sknui": "*",
+    "@heroicons/react": "2.0.14",
     "@supabase/supabase-js": "^2.4.1",
     "next": "^13.1.5",
     "react": "18.1.0",
