--- a/shells/web.labs.mariosouto.com/package.json
+++ b/shells/web.labs.mariosouto.com/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@devsoutinho-labs/chat-gpt": "*",
     "@devsoutinho/sknui": "*",
+    "@heroicons/react": "2.0.14",
     "@supabase/supabase-js": "^2.4.1",
     "next": "^13.1.5",
     "react": "18.1.0",
@@ -24,6 +25,9 @@
     "@devsoutinho/common-lint": "*",
     "@devsoutinho/common-test": "*",
     "@devsoutinho/common-tooling": "*",
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.4",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "typescript": "4.9.4"
