--- a/shells/web.labs.mariosouto.com/tsconfig.json
+++ b/shells/web.labs.mariosouto.com/tsconfig.json
@@ -20,6 +20,7 @@
     "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
+      "types/*": ["./types/*"],
       "@src/*": ["./src/*"]
     }
   },
